--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ node_modules/testacular/node_modules/socket.io/node_modules/ws/build
 .bin
 build/phantomjs/phantomjs
 build/phantomjs/phantomjs.exe
+node_modules/phantomjs/lib/phantom
