Ignored PhantomJS temp directory

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ node_modules/testacular/node_modules/socket.io/node_modules/ws/build
 build/phantomjs/phantomjs
 build/phantomjs/phantomjs.exe
 node_modules/phantomjs/lib/phantom
+node_modules/phantomjs/tmp
