--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "expect.js": "~0.2.0",
     "gaze": "~0.3.4",
     "jake": "~0.5.15",
-    "jshint": "~2.0.1"
+    "jshint": "~2.0.1",
+    "mocha": "~1.9.0"
   }
 }
