--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mocha": "~1.9.0",
     "nodeunit": "~0.8.0",
     "phantomjs": "~1.9.0-4",
-    "procfile": "~0.1.1"
+    "procfile": "~0.1.1",
+    "send": "~0.1.0"
   }
 }
