--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_mod
 node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_modules/ws/builderror.log
 node_modules/phantomjs/lib/phantom
 node_modules/phantomjs/tmp
+read.txt
+write.txt
