--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_mod
 node_modules/phantomjs/lib/phantom
 node_modules/phantomjs/tmp
 node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/lib/vendor/web-socket-js/flash-src/com/hurlant/crypto/rsa/RSAKey.as
+node_modules/phantomjs/lib/location.js
