--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gaze": "^0.6.4",
     "jake": "^8.0.9",
     "jshint": "^2.5.6",
-    "karma": "^0.12.24"
+    "karma": "^0.12.24",
+    "karma-commonjs": "0.0.12"
   }
 }
