--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma": "^0.12.24",
     "karma-commonjs": "0.0.12",
     "karma-expect": "^1.1.0",
-    "karma-mocha": "^0.1.9"
+    "karma-mocha": "^0.1.9",
+    "mocha": "^1.21.4"
   }
 }
