--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "karma-commonjs": "0.0.12",
     "karma-expect": "^1.1.0",
     "karma-mocha": "^0.1.9",
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "nodeunit": "^0.9.0"
   }
 }
