--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-mocha": "^0.1.9",
     "mocha": "^1.21.4",
     "nodeunit": "^0.9.0",
-    "phantomjs": "^1.9.10"
+    "phantomjs": "^1.9.10",
+    "procfile": "^0.1.1"
   }
 }
