--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nodeunit": "^0.9.0",
     "phantomjs": "^1.9.10",
     "procfile": "^0.1.1"
+  },
+  "dependencies": {
+    "send": "^0.9.3"
   }
 }
