--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "async": "^0.9.0",
     "browserify": "^5.12.1",
+    "glob": "^4.3.5",
     "jake": "^8.0.9",
     "jshint": "^2.5.6",
     "karma": "^0.12.24",
@@ -17,8 +18,8 @@
     "mocha": "^1.21.4",
     "nodeunit": "^0.9.0",
     "procfile": "^0.1.1",
-    "shelljs": "^0.3.0",
-    "selenium-webdriver": "^2.44.0"
+    "selenium-webdriver": "^2.44.0",
+    "shelljs": "^0.3.0"
   },
   "dependencies": {
     "send": "^0.9.3"
