--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,6 @@ node_modules/karma/node_modules/chokidar/node_modules/fsevents/
 node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_modules/ws/build/
 node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_modules/ws/builderror.log
 
-# Selenium WebDriverJS
-node_modules/selenium-webdriver/node_modules/ws/node_modules/bufferutil/build/
-node_modules/selenium-webdriver/node_modules/ws/node_modules/utf-8-validate/build/
+# Selenium WebDriverJS: Optional dependencies that don't build on vanilla Windows
+node_modules/selenium-webdriver/node_modules/ws/node_modules/bufferutil/
+node_modules/selenium-webdriver/node_modules/ws/node_modules/utf-8-validate/
