--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "weewikipaint",
   "version": "0.0.1",
   "engines": {
-    "node": "0.10.37",
-    "npm": "1.*"
+    "node": "0.12.2"
   },
   "devDependencies": {
     "async": "^0.9.0",
