--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-# Mac OS crap
+# Mac OS X
 .DS_Store
 
 # WebStorm
 .idea/workspace.xml
 
+# npm
+node_modules/**/.bin/
+
 # Build artifacts
 generated/
-
-# npm
-.bin/
 
 
 ### npm modules' build artifacts ###
