--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "shelljs": "^0.5.3"
   },
   "dependencies": {
-    "send": "^0.13.0"
+    "send": "^0.13.0",
+    "socket.io": "^1.3.7"
   }
 }
