--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "selenium-webdriver": "^2.46.1",
     "semver": "^5.1.0",
     "shelljs": "^0.5.3",
-    "socket.io-client": "^1.4.3"
+    "socket.io-client": "=1.4.3"
   },
   "dependencies": {
     "send": "^0.13.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "=1.3.7"
   }
 }
