--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "karma-mocha": "^1.1.1",
     "mocha": "^2.5.3",
     "procfile": "^0.1.1",
-    "selenium-webdriver": "^2.53.3",
+    "selenium-webdriver": "^3.0.0-beta-2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.0",
     "simplebuild-karma": "^1.0.0",
